// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBars AG-10525 should render tooltips with no errorbars 1`] = `
NodeList [
  <div
    aria-hidden="true"
    class="ag-charts-tooltip ag-charts-tooltip--no-interaction ag-charts-tooltip--wrap-hyphenate"
    data-presented-as-popover=""
    popover="manual"
    style="pointer-events: none; --top: 0px; --left: 0px;"
  >
    <div
      class="ag-charts-tooltip-content"
    >
      <div
        class="ag-charts-tooltip-row"
      >
        <span
          class="ag-charts-tooltip-label"
        >
          Jan
        </span>
         
        <span
          class="ag-charts-tooltip-value"
        >
          8
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`ErrorBars should render default tooltips 1`] = `
NodeList [
  <div
    aria-hidden="true"
    class="ag-charts-tooltip ag-charts-tooltip--no-interaction ag-charts-tooltip--wrap-hyphenate"
    data-presented-as-popover=""
    popover="manual"
    style="pointer-events: none; --top: 0px; --left: 0px;"
  >
    <div
      class="ag-charts-tooltip-content"
    >
      <span
        class="ag-charts-tooltip-symbol"
      >
        <svg
          height="12"
          overflow="visible"
          viewBox="0 0 12 12"
          width="12"
        >
          <g
            transform="matrix(0.9230769230769231 0 0 0.9230769230769231 0.46153846153846123 0.46153846153846123)"
          >
            <path
              d="M 12 6 C 12 9.31370849898476 9.313708498984761 12 6 12 C 2.68629150101524 12 0 9.313708498984761 0 6.000000000000001 C 0 2.6862915010152406 2.686291501015239 8.881784197001252e-16 5.999999999999999 0 C 9.31370849898476 -8.881784197001252e-16 12 2.6862915010152384 12 5.999999999999998 Z"
              fill="#f3622d"
              fill-opacity="0.8"
              stroke="#aa4520"
              stroke-opacity="1"
              stroke-width="1"
            />
          </g>
        </svg>
      </span>
      <div
        class="ag-charts-tooltip-row"
      >
        <span
          class="ag-charts-tooltip-label"
        >
          volume
        </span>
         
        <span
          class="ag-charts-tooltip-value"
        >
          2.5
        </span>
      </div>
       
      <div
        class="ag-charts-tooltip-row"
      >
        <span
          class="ag-charts-tooltip-label"
        >
          pressure
        </span>
         
        <span
          class="ag-charts-tooltip-value"
        >
          4.2
        </span>
      </div>
    </div>
  </div>,
]
`;
